--- a/zadanie3next/css/style.css
+++ b/zadanie3next/css/style.css
@@ -32,6 +32,22 @@ body .cont .addNote {
  
 }
 
+  #circle {
+      width: 90px;
+      height: 30px;
+      opacity: 0.1;
+
+      background: black;
+      position: absolute; 
+   
+top: -10px; 
+right: 35px; 
+
+    }
+  #circle:hover{
+      opacity: 0.2;
+
+  }
 
 
 .note:hover {
@@ -44,7 +60,7 @@ body .cont .addNote {
   position: relative;
 }
 .note header button { 
-opacity: .05; 
+opacity: .3; 
 background: transparent; 
 font-size: 15px; 
 border: none; 
